--- a/src/App.css
+++ b/src/App.css
@@ -44,16 +44,19 @@
 .container {
   width: 100vw;
   height: 100vh;
-  background-color: white;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
+  background-color: white;
 }
 
 .ball {
   position: absolute;
   will-change: transform;
   transform-origin: center;
-  cursor: pointer;
 }
 
 .ball img {
